----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-03-27 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/serbian: Updated, thanks to Mihailo Stefanovic (mikis).

2005-03-26 Alexander M. Turek  <me@derrabus.de>
    * libraries/engines/innodb.lib.php: Caught possible devision by zero.
    * lang/dutch-iso-8859-15.inc.php, lang/finnish-iso-8859-15.inc.php,
      lang/italian-iso-8859-15.inc.php, lang/portoguese-iso-8859-15.inc.php,
      lang/spanish-iso-8859-15.inc.php, libraries/select_lang.lib.php:
      Added more Latin9 language files.

2005-03-25 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties.inc.php: bug #1170255, undefined index: Field

2005-03-25 Alexander M. Turek  <me@derrabus.de>
    * db_details_structure.php: Let's prefer separate icons over CSS 3 hacks
      for marking a functionality as unavailable.
    * libraries/relation.lib.php:
      - Removed recoding function calls from controluser queries as they do
        not depend on the connection charset anymore;
      - Added emulated relations for some information_schema tables. To be
        continued.

2005-03-24 Alexander M. Turek  <me@derrabus.de>
    * libraries/dbi/*.dbi.lib.php, libraries/common.lib.php,
      libraries/database_interface.lib.php:
      - Force separate connection for controluser queries;
      - Don't apply collation_connection settings to controluser connections.
    * lang/galician-*.inc.php: Updates, thanks to Xosé Calvo.
    * lang/chinese_traditional-*.inc.php: Updates, thanks to Siu Sun.

2005-03-22 Marc Delisle  <lem9@users.sourceforge.net>
    * header.inc.php: undefined index tbl_is_view when copying a table
      with constraints and an error occurs

2005-03-20 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/spanish: Updated, thanks to Daniel Hinostroza (hinostroza).
    * tbl_properties.inc.php: do not add ON UPDATE CURRENT_TIMESTAMP twice

2005-03-19 Alexander M. Turek  <me@derrabus.de>